# QT_SQL_Application

./: CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: myDB.db
